apt (0.9.6) UNRELEASED; urgency=low

  * apt-pkg/contrib/fileutl.cc:
    - dup() given compressed fd in OpenDescriptor if AutoClose
      is disabled as otherwise gzclose() and co will close it
  * doc/*.xml:
    - mark even more stuff as untranslateable and improve the
      markup here and there (no real text change)

 -- David Kalnischkies <kalnischkies@gmail.com>  Tue, 22 May 2012 18:13:19 +0200

apt (0.9.5) unstable; urgency=low

  [ Chris Leick ]
  * proofreading of the manpage pot
  * German manpage translation update (Closes: #673294)

  [ David Kalnischkies ]
  * buildlib/podomain.mak:
    - ensure that all sources end up in the srclist so that we don't
      forget to extract half of the translation strings
  * buildlib/inttypes.h.in:
    - remove inttypes.h compatibility as providing such a c99 types
      compatibility conflicts with the usage of c99 type long long
  * apt-pkg/contrib/mmap.cc:
    - have a dummy SyncToFd around in case of ReadOnly access to a
      compressed file as we otherwise on Close() do not delete[] the
      char buffer but munmap() it… (Closes: #673815)
  * debian/control:
    - moving debiandoc-sgml to Build-Depends-Indep was one step too much
      for the buildds as we still build two sgml files in arch:any
  * debian/rules:
    - move internal-solver as 'apt' to his friend dump-solver in
      /usr/lib/apt/solvers to avoid writing a manpage for it

 -- Michael Vogt <mvo@debian.org>  Tue, 22 May 2012 16:14:22 +0200

apt (0.9.4) unstable; urgency=low

  [ David Kalnischkies ]
  * methods/http.cc:
    - after many years of pointless discussions disable http/1.1 pipelining
      by default as many webservers and proxies seem to be unable to conform
      to specification must's (rfc2616 section 8.1.2.2) (LP: #996151)
    - add spaces around PACKAGE_VERSION to fix FTBFS with -std=c++11
  * apt-pkg/pkgcachegen.cc:
    - make IsDuplicatedDescription static so that it is really private