@@ -6,6 +6,7 @@ apt (0.9.6) UNRELEASED; urgency=low
   * doc/*.xml:
     - mark even more stuff as untranslateable and improve the
       markup here and there (no real text change)
+    - use docbook DTD 4.5 instead of 4.2 to have valid docs
 
  -- David Kalnischkies <kalnischkies@gmail.com>  Tue, 22 May 2012 18:13:19 +0200
 
